force-app/main/default/objects/Assortment_Matrix_review__c/fields/BU_Source__c.field-meta.xml
<CustomField>
    <fullName>BU_Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BU Source</label>
    <referenceTo>Orga_BU__c</referenceTo>
    <relationshipLabel>Assortment Matrix review (BU Source)</relationshipLabel>
    <relationshipName>Assortment_Matrix_review1</relationshipName>
    <type>Lookup</type>
</CustomField>