force-app/main/default/objects/Assortment_Matrix_review__c/fields/Code_produit__c.field-meta.xml
<CustomField>
    <fullName>Code_produit__c</fullName>
    <formula>Produit__r.ProductCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Code produit</label>
    <type>Text</type>
</CustomField>