force-app/main/default/objects/Assortment_Matrix_review__c/fields/EAN__c.field-meta.xml
<CustomField>
    <fullName>EAN__c</fullName>
    <formula>Produit__r.Product_EAN__c</formula>
    <label>EAN</label>
    <type>Text</type>
</CustomField>