force-app/main/default/objects/Assortment_Matrix_review__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <label>Nom</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Budget</fullName>
            </value>
            <value>
                <fullName>Negotiated</fullName>
            </value>
            <value>
                <fullName>Forecast</fullName>
            </value>
            <value>
                <fullName>Fact1</fullName>
            </value>
            <value>
                <fullName>Fact2</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Like4Like</fullName>
            </value>
            <value>
                <fullName>Target</fullName>
            </value>
            <value>
                <fullName>Forecast P1</fullName>
            </value>
            <value>
                <fullName>Budget P1</fullName>
            </value>
            <value>
                <fullName>Target P1</fullName>
            </value>
            <value>
                <fullName>Negotiated P1</fullName>
            </value>
            <value>
                <fullName>Fact1 P1</fullName>
            </value>
            <value>
                <fullName>Fact2 P1</fullName>
            </value>
            <value>
                <fullName>Like4Like P1</fullName>
            </value>
            <value>
                <fullName>Salesforce P1</fullName>
            </value>
            <value>
                <fullName>Fact1_1</fullName>
                <isActive>false</isActive>
                <label>Fact1_1</label>
            </value>
            <value>
                <fullName>Fact2_1</fullName>
                <isActive>false</isActive>
                <label>Fact2_1</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>