force-app/main/default/objects/Assortment_Matrix_review__c/fields/ND_1__c.field-meta.xml
<CustomField>
    <fullName>ND_1__c</fullName>
    <label>ND N-1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>