force-app/main/default/objects/Assortment_Matrix_review__c/fields/ND__c.field-meta.xml
<CustomField>
    <fullName>ND__c</fullName>
    <label>ND</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>