force-app/main/default/objects/Assortment_Matrix_review__c/fields/ND_Marketbase__c.field-meta.xml
<CustomField>
    <fullName>ND_Marketbase__c</fullName>
    <label>ND Marketbase</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>