force-app/main/default/objects/Assortment_Matrix_review__c/fields/Orga_HE_path__c.field-meta.xml
<CustomField>
    <fullName>Orga_HE_path__c</fullName>
    <formula>Produit__r.Category__r.Path__c</formula>
    <label>Hierarchy path</label>
    <type>Text</type>
</CustomField>