force-app/main/default/objects/Assortment_Matrix_review__c/fields/Orga_Hierarchy_Element__c.field-meta.xml
<CustomField>
    <fullName>Orga_Hierarchy_Element__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Orga Hierarchy Element</label>
    <referenceTo>Orga_HE__c</referenceTo>
    <relationshipLabel>Assortment Matrix review</relationshipLabel>
    <relationshipName>Assortment_Matrix_review</relationshipName>
    <type>Lookup</type>
</CustomField>