force-app/main/default/objects/Assortment_Matrix_review__c/fields/Product_VIP__c.field-meta.xml
<CustomField>
    <fullName>Product_VIP__c</fullName>
    <formula>Produit__r.VIP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product VIP</label>
    <type>Text</type>
</CustomField>