force-app/main/default/objects/Assortment_Matrix_review__c/fields/SellOut_1__c.field-meta.xml
<CustomField>
    <fullName>SellOut_1__c</fullName>
    <label>SellOut N-1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>