force-app/main/default/objects/Assortment_Matrix_review__c/fields/SellOut__c.field-meta.xml
<CustomField>
    <fullName>SellOut__c</fullName>
    <label>SellOut</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>