force-app/main/default/objects/Assortment_Matrix_review__c/fields/WD_P1__c.field-meta.xml
<CustomField>
    <fullName>WD_P1__c</fullName>
    <label>WD-1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>