force-app/main/default/objects/Assortment_Matrix_review__c/fields/Year_String__c.field-meta.xml
<CustomField>
    <fullName>Year_String__c</fullName>
    <formula>TEXT(Year__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year String</label>
    <type>Text</type>
</CustomField>